<resources>
    <string name="app_name">Anime Music</string>
    <string name="recent">Recent</string>
    <string name="see_all">See All</string>
    <string name="top100">Top 100</string>
    <string name="made_for_you">Made For You</string>
    <string name="anime">Anime</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="added_to_favorite">Added to favorite</string>
    <string name="added_to_my_playlist">Added to playlist</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_frame_success">Apply this frame successfully</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="btn_follow_loading">Follow....</string>
    <string name="btn_following">Following</string>
    <string name="btn_not_follow">Follow</string>
    <string name="btn_unfollow_loading">Unfollow....</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_load_reward">Cannot load. Please try again later or check your internet</string>
    <string name="cannot_play">Can\'t play song. We are fixing it right now!</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">00000000000000000000000000000000</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="dash_board_feature">Made For You</string>
    <string name="dash_board_playlist">Anime</string>
    <string name="dashboard_chart">Top 100</string>
    <string name="dashboard_feature">Home</string>
    <string name="dashboard_recently_played">Recent</string>
    <string name="dashboard_see_all">See All</string>
    <string name="default_web_client_id">286275323043-js3oqhilee58kq9g6cpfdme060lsgpe7.apps.googleusercontent.com</string>
    <string name="define_roundedimageview" />
    <string name="dialog_explain_des">Unfortunately, this app can\'t. Why? Because allowing users to download a local copy of copyrighted content without authorization is considered illegal, hence this application will be taken down immediately</string>
    <string name="dialog_explain_ok">I understand</string>
    <string name="dialog_explain_title">Could this app able to listen offline?</string>
    <string name="dialog_rate_des">If you enjoy using our app, would you mind rating us on store, then?</string>
    <string name="dialog_request_song_des">Can\'t find your songs? Send us the title, we will add them for you!</string>
    <string name="dialog_request_song_success">Request confirmed!</string>
    <string name="dialog_request_title">We Are Your Servants</string>
    <string name="empty">This playlist is empty</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_app_id">2736728116603547</string>
    <string name="fastscroll__app_name">RecyclerViewFastScroll</string>
    <string name="fb_login_protocol_scheme">fb2736728116603547</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="featured_playlist_list">Made For You</string>
    <string name="firebase_database_url">https://musicplayer2020-6528c.firebaseio.com</string>
    <string name="gcm_defaultSenderId">286275323043</string>
    <string name="get_started">Get Started</string>
    <string name="google_api_key">AIzaSyCVZzKappPeCH67dKfK9gsSjn2d3oqA-nM</string>
    <string name="google_app_id">1:286275323043:android:5793bfd2b0e71275a46b16</string>
    <string name="google_crash_reporting_api_key">AIzaSyCVZzKappPeCH67dKfK9gsSjn2d3oqA-nM</string>
    <string name="google_storage_bucket">musicplayer2020-6528c.appspot.com</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="label_buffering">Buffering</string>
    <string name="label_next">Next track</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="label_play_pause">Play and pause toggle</string>
    <string name="label_previous">Previous track</string>
    <string name="library_roundedimageview_author">Vince Mi</string>
    <string name="library_roundedimageview_authorWebsite">https://github.com/vinc3m1</string>
    <string name="library_roundedimageview_isOpenSource">true</string>
    <string name="library_roundedimageview_libraryDescription">A fast ImageView (and Drawable) that supports rounded corners (and ovals or circles) based on the original example from Romain Guy.</string>
    <string name="library_roundedimageview_libraryName">RoundedImageView</string>
    <string name="library_roundedimageview_libraryVersion">1.3.0</string>
    <string name="library_roundedimageview_libraryWebsite">https://github.com/vinc3m1/RoundedImageView</string>
    <string name="library_roundedimageview_licenseId">apache_2_0</string>
    <string name="library_roundedimageview_repositoryLink">https://github.com/vinc3m1/RoundedImageView.git</string>
    <string name="login_failed">Can not login. Please try again later</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="my_playlist_empty">This playlist is empty\n1. Go to song that you like\n2. Click on song option\n3. Click on Add to playlist</string>
</resources>