<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/song_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_playlist_gradient"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_local_empty"
            android:visibility="invisible"
            android:textSize="@dimen/m_size"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_playlist_empty"
            android:layout_centerInParent="true"
            android:textColor="@color/white"></TextView>



        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:expanded="false">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_scrollFlags="scroll">

                    <LinearLayout
                        android:id="@+id/info_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="1.1">

                        <com.makeramen.roundedimageview.RoundedImageView
                            android:id="@+id/playlist_thumb"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="90dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/placeholder_song"
                            app:riv_corner_radius="@dimen/m_radius" />

                        <LinearLayout
                            android:id="@+id/title_container"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/playlist_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Recently Played"
                                android:textColor="@color/text_title"
                                android:textSize="@dimen/xxxl_text"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/toolbar"
                        app:layout_collapseMode="pin" />
                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/playlist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.github.ybq.android.spinkit.SpinKitView
                    android:id="@+id/mini_loading"
                    style="@style/SpinKitView.Large.CubeGrid"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:animateLayoutChanges="true"
                    android:padding="5dp"
                    android:visibility="gone"
                    app:SpinKit_Color="#fff" />

                <RelativeLayout
                    android:id="@+id/empty_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:visibility="gone">

                    <com.example.animemusic.view.EmptyImageView
                        android:id="@+id/empty"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_dissatisfied" />

                    <TextView
                        android:id="@+id/info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/empty"
                        android:layout_centerHorizontal="true"
                        android:text="@string/empty"
                        android:textAlignment="center"
                        android:textColor="@color/search_not_focus"
                        android:textSize="@dimen/l_text" />
                </RelativeLayout>
            </FrameLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </RelativeLayout>
</FrameLayout>